<resources>
    <string name="app_name">Vynils</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>

    <string name="title_vinilos">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
...
    <string name="loading">Cargando…</string>
    <string name="error_prefix">Error: %1$s</string>

    <string name="desc_collector_image">Imagen del coleccionista</string>
    <string name="desc_artist_image">Imagen de %1$s</string>
    <string name="desc_album_cover">Carátula de %1$s</string>
    <string name="desc_add">Agregar</string>
    <string name="title_add_album">Agregar Álbum</string>
    <string name="label_artist_required">Artista</string>
    <string name="label_year_optional">Año</string>
    <string name="label_genre_optional">Género</string>
    <string name="label_album_name">Nombre del álbum</string>
    <string name="label_album_cover_url">URL de la carátula</string>
    <string name="label_album_release_date">Fecha de lanzamiento (YYYY-MM-DD)</string>
...
    <string name="title_add_artist_to_album">Agregar artista al álbum</string>
    <string name="label_select_artist">Artista</string>
    <string name="placeholder_select_artist">Selecciona un artista</string>
    <string name="title_add_album_to_artist">Agregar álbum al artista</string>
    <string name="label_select_album">Álbum</string>
    <string name="placeholder_select_album">Selecciona un álbum</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_back">Atras</string>
    <string name="label_band_suffix">%1$s (Banda)</string>
    <string name="label_musician_suffix">%1$s (Músico)</string>
    <string name="msg_select_artist_required">Debes seleccionar un artista</string>
    <string name="msg_select_album_required">Debes seleccionar un álbum</string>
    <string name="msg_no_artists_available">No hay artistas disponibles</string>
...
